@@ -5,6 +5,8 @@
  3. New command: PAY
  4. New disable flag: SHOWXPGAINS
  5. New prowess option: EXP-WORDS (for showing rp xp)
+ 6. SHOUT (+SHOUTAT) (+SHOUTTO) now commands like Yell.
+ 
 
 # Build 5.11.0.1 Release 10/28/2025
   1. Proxy server reconnects now bypass conn-spam blocks
